# frogdata

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  TODO  bootstrap  configure.ac  frogdata.pc.in
config/: Makefile.am  cgn.equivalents  cgn_token.trans  cgntags.main  frog-tok-nl  frog.cfg  frog.filter  mblem.tree  mblem.tree.wgt  mbma.igtree  mbma.igtree.wgt  ner.known
config/dum/: Makefile.am  README.md  crmconstraints.cgn  crmsub.cgn  frog.cfg  froggen.data.1paxes  froggen.data.known.dddwfWawa.wgt  froggen.data.top500  froggen.tree.wgt
config/nl/: Makefile.am  Makefile.am~  frog.cfg  mbma.igtree  mbma.igtree.wgt  striptokens.txt
config/nld/: Frog.mbt.1.1.1paxes  Frog.mbt.1.1.known.dddwfWawa.wgt  Frog.mbt.1.1.settings  Frog.mbt.1.1.settings~  Frog.mwu.1.1  Makefile.am  Makefile.am~  cgn_token.trans  chunkgen.data.10paxes  chunkgen.data.known.dddwfWawa  chunkgen.data.known.dddwfWawa.wgt  chunkgen.data.lex  chunkgen.data.lex.ambi.05  chunkgen.data.settings  chunkgen.data.top200  constraints.cgn  eve.ner  familienamen.lst  familienamen.ner  frog-mbtserver.cfg  frog-parser.cfg  frog-servers.cfg  frog-timblservers.cfg  frog.cfg  frog.cfg.template  gemeenten-nld.ner  geonames-be.ner  geonames-nl.ner  geonames.BE.A.region.ner.txt  geonames.BE.H-LK.lakes.ner.txt  geonames.BE.H-STM.rivers.ner.txt  geonames.BE.H.water.ner.txt  geonames.BE.L.parks.ner.txt  geonames.BE.P.cities.ner.txt  geonames.BE.R-ST.streets.ner.txt  geonames.BE.R.roads.ner.txt  geonames.BE.S.buildings.ner.txt  geonames.BE.T.mountains.ner.txt  geonames.BE.V.forests.ner.txt  geonames.NL.A.region.ner.txt  (+54 more)
config/nld-vmn/: README.md  babsub.cgn  frog.cfg  froggen.data.1paxes  froggen.data.known.dddwfWawa  froggen.data.lex.ambi.05  froggen.tree.data
config/nld-vnn/: Makefile.am  babconstraints.cgn  babsub.cgn  froggen.data.known.dddwfWawa.wgt  froggen.data.lex  froggen.data.top500  froggen.data.unknown.chnppdddwFawasss  froggen.settings  froggen.tree  froggen.tree.wgt
scripts/: parse_geonames.py  train_chunker.sh  train_chunker_v2.sh  train_mbt_v2.sh  train_ner.sh  train_ner_enriched.sh  train_new_ner.sh
