#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
# $Id: configure.ac 14475 2012-03-19 13:25:09Z sloot $
# $URL: https://ilk.uvt.nl/svn/sources/Frog/trunk/configure.ac $

AC_PREREQ(2.59)
AC_INIT([frogdata], [0.8], [timbl@uvt.nl])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([configure.ac])

AC_OUTPUT([
  Makefile
  frogdata.pc
  config/Makefile
])
