config_DATA = \
	froggen.data.1paxes froggen.data.known.dddwfWawa.wgt froggen.data.lex.ambi.05 froggen.data.unknown.chnppdddwFawasss froggen.tree froggen.tree.wgt \
	froggen.data.known.dddwfWawa froggen.data.lex froggen.data.top500 froggen.settings froggen.tree.data \
	babsub.cgn babconstraints.cgn \
	frog.cfg

configdir = $(datadir)/frog/nld-vnn

EXTRA_DIST = $(config_DATA)
