config_DATA = mblem.tree mblem.tree.wgt \
	mbma.igtree mbma.igtree.wgt \
        Frog.mwu.1.0 \
	Frog.mbt.1.0.1paxes \
	Frog.mbt.1.0.lex \
	Frog.mbt.1.0.known.dddwfWawa \
	Frog.mbt.1.0.known.dddwfWawa.wgt \
	Frog.mbt.1.0.lex.ambi.05 \
	Frog.mbt.1.0.settings \
	Frog.mbt.1.0.top500 \
	Frog.mbt.1.0.unknown.chnppdddwFawasss \
	Frog.mbdp.1.0.dir.ibase \
	Frog.mbdp.1.0.dir.ibase.wgt \
	Frog.mbdp.1.0.pairs.sampled.ibase \
	Frog.mbdp.1.0.pairs.sampled.ibase.wgt \
	Frog.mbdp.1.0.rels.ibase \
	Frog.mbdp.1.0.rels.ibase.wgt \
	chunkgen.data.lex.ambi.05 \
	chunkgen.data.lex \
	chunkgen.data.settings \
	chunkgen.data.10paxes \
	chunkgen.data.top200 \
	chunkgen.data.known.dddwfWawa \
	chunkgen.data.unknown.chnppddwFawasss \
	nergen.data.settings \
	nergen.data.lex.ambi.05 \
	nergen.data.lex \
	nergen.data.10paxes \
	nergen.data.top1000 \
	nergen.data.known.ddwdwfWawaa \
	nergen.data.unknown.chnppddwdwFawawasss \
	ners.known loc.ner per.ner org.ner pro.ner \
	eve.ner misc.ner \
	waterschappen-nld.ner org-gemeenten-nld.ner org-provincies-nld.ner \
	org-regios-nld.ner voornamen.ner familienamen.ner landen.ner plaatsen-nld.ner postcodes-nld.ner provincies-nld.ner \
	geonames.BE.A.region.ner.txt \
	geonames.BE.H-LK.lakes.ner.txt \
	geonames.BE.H-STM.rivers.ner.txt \
	geonames.BE.H.water.ner.txt \
	geonames.BE.L.parks.ner.txt \
	geonames.BE.P.cities.ner.txt \
	geonames.BE.R.roads.ner.txt \
	geonames.BE.R-ST.streets.ner.txt \
	geonames.BE.S.buildings.ner.txt \
	geonames.BE.T.mountains.ner.txt \
	geonames.BE.V.forests.ner.txt \
	geonames.NL.A.region.ner.txt \
	geonames.NL.H-LK.lakes.ner.txt \
	geonames.NL.H-STM.rivers.ner.txt \
	geonames.NL.H.water.ner.txt \
	geonames.NL.L.parks.ner.txt \
	geonames.NL.P.cities.ner.txt \
	geonames.NL.R.roads.ner.txt \
	geonames.NL.R-ST.streets.ner.txt \
	geonames.NL.S.buildings.ner.txt \
	geonames.NL.T.mountains.ner.txt \
	geonames.NL.V.forests.ner.txt \
	wereldsteden.ner.txt \
	cgntags.main cgntags.sub cgn_token.trans \
	frog.filter \
	striptokens.txt \
	subsets.cgn constraints.cgn \
	frog.cfg

configdir = $(datadir)/frog/nld

EXTRA_DIST = $(config_DATA)
