config_DATA = mblem.tree mblem.tree.wgt \
	mblem-2.0.lex.tree mblem-2.0.lex.tree.wgt \
	mbma.igtree mbma.igtree.wgt \
	Frog.mwu.1.0 \
	Frog.mbt.1.1.1paxes \
	Frog.mbt.1.1.lex \
	Frog.mbt.1.1.known.dddwfWawa \
	Frog.mbt.1.1.known.dddwfWawa.wgt \
	Frog.mbt.1.1.lex.ambi.05 \
	Frog.mbt.1.1.settings \
	Frog.mbt.1.1.top500 \
	Frog.mbt.1.1.unknown.chnppdddwFawasss \
	Frog.mbdp.1.0.dir.ibase \
	Frog.mbdp.1.0.dir.ibase.wgt \
	Frog.mbdp.1.0.pairs.sampled.ibase \
	Frog.mbdp.1.0.pairs.sampled.ibase.wgt \
	Frog.mbdp.1.0.rels.ibase \
	Frog.mbdp.1.0.rels.ibase.wgt \
	chunkgen.data.lex.ambi.05 \
	chunkgen.data.lex \
	chunkgen.data.settings \
	chunkgen.data.10paxes \
	chunkgen.data.top200 \
	chunkgen.data.known.dddwfWawa \
	chunkgen.data.unknown.chnppddwFawasss \
	nergen.data.settings \
	nergen.data.lex.ambi.05 \
	nergen.data.lex \
	nergen.data.10paxes \
	nergen.data.top1000 \
	nergen.data.known.ddwdwfWawaa \
	nergen.data.unknown.chnppddwdwFawawasss \
	ners.known loc.ner per.ner org.ner pro.ner \
	eve.ner misc.ner geonames-nl.ner geonames-be.ner \
	waterschappen-nld.ner gemeenten-nld.ner provincies-nld.ner \
	regios-nld.ner voornamen.ner familienamen.ner landen-europa.ner \
	straten-nld.ner plaatsen-nld.ner \
	cgntags.main cgntags.sub cgn_token.trans \
	frog.filter \
	striptokens.txt \
	subsets.cgn constraints.cgn \
	frog.cfg

configdir = $(datadir)/frog/nld

EXTRA_DIST = $(config_DATA)
